[project]
name = "crochet-charts-py"
version = "0.1.0"
description = ""
authors = [
    {name = "mark1626",email = "nimalan.m@protonmail.com"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "dearpygui (>=2.0.0,<3.0.0)"
]

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
